<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="numPax">Num of Pax</string>
    <string name="svsDisabled">NO SVS</string>
    <string name="svsEnabled">SVS</string>
    <string name="gstDisabled">NO GST</string>
    <string name="gstEnabled">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">Paynow</string>
    <string name="split">split</string>
    <string name="reset">reset</string>
</resources>
